保持默认字体大小

--- a/css/layout/typography.styl
+++ b/css/layout/typography.styl
@@ -3,7 +3,7 @@
 // Typography System                            ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-19 02:36  ||
-// Last Update: 2015-02-21 17:52 @ Rakume       ||
+// Last Update: 2015-03-13 20:50 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -16,7 +16,9 @@
 
 body
   color color-normal
-  font 400 font-size/1.82 font-family
+  font-weight 400
+  line-height 1.82
+  font-family font-family
 
 body,
 article,
