--- a/css/components/msg.styl
+++ b/css/components/msg.styl
@@ -1,19 +1,7 @@
 // ===============================================
-// Lutachu CSS / Msg.styl                       ||
-// Msg Box                                      ||
+// Components / Msg.styl                        ||
+//                                              ||
 // =============================================||
-// Made by Rakume<i@fake.moe> 2015-02-22 20:04  ||
-// Last Update: 2015-02-22 20:04 @ Rakume       ||
+// Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
-
-.msg
-  padding .6em 1em
-  margin .6em 0
-  border-left width-border solid transparent
-
-  for c in color
-    &.msg-{c}
-      border-left-color color[c];
-      color darken(color[c], 5);
-      background-color lighten(color[c], 30);
