--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -1,9 +1,8 @@
 // ===============================================
-// Lutachu CSS / Lutachu.styl                   ||
-// Freamework's Boostrap                        ||
+// Lutachu.styl                                 ||
+//                                              ||
 // =============================================||
-// Made by Rakume<i@fake.moe> 2015-02-18 22:10  ||
-// Last Update: 2015-02-23 03:27 @ Rakume       ||
+// Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
 
@@ -35,4 +34,4 @@
 @import "components/nav";
 
 // Utillyties
-@import "layout/utillyties";
+@import "utillyties";
