--- a/css/components/nav.styl
+++ b/css/components/nav.styl
@@ -1,85 +1,7 @@
 // ===============================================
-// Lutachu CSS / Nav.styl                       ||
-// Navbars                                      ||
+// Components / Nav.styl                        ||
+//                                              ||
 // =============================================||
-// Made by Rakume<i@fake.moe> 2015-02-23 03:26  ||
-// Last Update: 2015-02-23 04:18 @ Rakume       ||
+// Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
-
-.nav
-  clearfix()
-  line-height 50px
-
-  a
-    float left
-    display block
-    cursor pointer
-    padding 0 1.4em
-    text-decoration none
-    transition background-color .3s ease
-
-    &.right
-      float right
-
-    &:hover
-      background-color rgba(0, 0, 0, .15)
-
-    &.active,
-    &.band
-      background-color rgba(0, 0, 0, .3)
-
-  .drop
-    float left
-    position relative
-
-    .drop-menu
-      left 0
-      top 100%
-      display none
-      min-width 120px
-      position absolute
-      background-color #fff
-      clearfix()
-
-      a
-        float none
-
-    &:hover > a
-      background-color rgba(0, 0, 0, .3)
-
-    &:hover .drop-menu
-      display block
-
-    &.right
-      float right
-
-  &.fixed
-    top 0
-    left 0
-    width 100%
-    z-index 99999
-
-    &.nav-vertical
-      height 100%
-      width inherit
-
-  &.nav-vertical
-
-    a,
-    .drop
-      float none
-
-    .drop
-      .drop-menu
-        top 0
-        left 100%
-
-  for c in color
-    if (c != 'white' && c != 'black' && c != 'grey')
-      &.nav-{c},
-      &.nav-{c} .drop-menu
-        background-color color[c];
-
-        a
-          color #fff
