--- a/css/components/poem.styl
+++ b/css/components/poem.styl
@@ -1,43 +1,41 @@
 // ===============================================
-// Lutachu CSS / Poem.styl                      ||
-// Horizontal And Vertical Poem                 ||
+// Components / Poem.styl                       ||
+//                                              ||
 // =============================================||
-// Made by Rakume<i@fake.moe> 2015-02-21 17:49  ||
-// Last Update: 2015-02-21 17:49 @ Rakume       ||
+// Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
 
-
 // Horizontal
-.poem-hc
-  text-align center
-  margin 2em 0
+.m-poem-hc
+  text-align: center;
+  margin: 2em 0;
 
   p
-    margin-bottom .2em
+    margin-bottom: .2em;
 
     &:before
-      content none
+      content: none;
 
-  .poem-author
-    display block
-    text-align right
-    font-weight 800
+  .m-poem-author
+    display: block;
+    text-align: right;
+    font-weight: 800;
 
     &:before
-      content '——'
+      content: '——';
 
 // Vertical
 
-.poem-lr,
-.poem-rl
-  display block
-  white-space pre
-  margin 2em auto
-  line-height 1.4em
-  letter-spacing 3px
-  writing-mode vertical-rl
-  -webkit-writing-mode vertical-rl
+.m-poem-lr,
+.m-poem-rl
+  display: block;
+  white-space: pre-line;
+  margin: 2em auto;
+  line-height: 1.4em;
+  letter-spacing: 3px;
+  writing-mode: vertical-rl;
+  -webkit-writing-mode: vertical-rl;
 
   h1,
   h2,
@@ -45,26 +43,30 @@
   h4,
   h5,
   h6,
-  .poem-title
-    margin 0
-    margin-left -.5em
+  .m-poem-title
+    margin: 0;
+    margin-left: -.5em;
+    font-weight: bold;
+    font-family: font-family['serif'];
 
     &:before
-      content none
+      content: none;
 
-    & > span
-      font-size .6em
+    .m-poem-author
+      font-size: 60%;
 
   p
-    margin 0 -1em
-    text-align left
-    max-height 600px
-    letter-spacing inherit
-    word-wrap break-word
+    margin: 0 -.3em;
+    text-align: left;
+    max-height: 600px;
+    letter-spacing: inherit;
+    word-wrap: break-word;
+    white-space: pre-line;
+    line-height: 1em;
 
     &:before
-      content none
+      content: none;
 
-.poem-lr
-  writing-mode vertical-lr
-  -webkit-writing-mode vertical-lr
+.m-poem-lr
+  writing-mode: vertical-lr;
+  -webkit-writing-mode: vertical-lr;
