--- a/css/layout/grid.styl
+++ b/css/layout/grid.styl
@@ -1,9 +1,8 @@
 // ===============================================
-// Lutachu CSS / Grid.styl                      ||
-// 1~12 Rows Grid System                        ||
+// Layout / Grid.styl                           ||
+//                                              ||
 // =============================================||
-// Made by Rakume<i@fake.moe> 2015-02-19 19:36  ||
-// Last Update: 2015-03-08 13:48 @ Rakume       ||
+// Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
 
