--- a/css/mixins.styl
+++ b/css/mixins.styl
@@ -1,16 +1,63 @@
 // ===============================================
-// Lutachu CSS / Mixins.styl                    ||
-// Framework's Mixins                           ||
+// Mixins.styl                                  ||
+//                                              ||
 // =============================================||
-// Made by Rakume<i@fake.moe> 2015-02-19 22:02  ||
-// Last Update: 2015-02-19 22:02 @ Rakume       ||
+// Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
 
-// Box Model
+// CSS 3
 // -----------------------------------------------------------------------------
 
-// Clearfix
+@keyframes spin
+  0%
+    transform rotate(0deg)
+
+  100%
+    transform rotate(359deg)
+
+vendor(prop, args)
+  -webkit-{prop} args
+  -moz-{prop} args
+  {prop} args
+
+// Border Radius
+
+border-radius()
+  vendor('border-radius', arguments)
+
+border-top-radius(n)
+  border-radius n n 0 0
+
+border-right-radius(n)
+  border-radius 0 n n 0
+
+border-bottom-radius(n)
+  border-radius 0 0 n n
+
+border-left-radius(n)
+  border-radius n 0 0 n
+
+// Transform
+transform()
+  vendor('transform', arguments)
+
+// Animation
+animation()
+  vendor('animation', arguments)
+
+// Transition
+transition()
+  vendor('transition', arguments)
+
+// Box-Shadow
+box-shadow()
+  vendor('box-shadow', arguments)
+
+spin(v)
+  animation spin v infinite linear
+
+// Float
 
 clearfix()
   &:before,
@@ -37,47 +84,6 @@ size(w, h)
 square(w)
   size w, w
 
-// CSS 3
-// -----------------------------------------------------------------------------
-
-vendor(prop, args)
-  -webkit-{prop} args
-  -moz-{prop} args
-  {prop} args
-
-// Border Radius
-
-border-radius()
-  vendor('border-radius', arguments)
-
-border-top-radius(n)
-  border-radius n n 0 0
-
-border-right-radius(n)
-  border-radius 0 n n 0
-
-border-bottom-radius(n)
-  border-radius 0 0 n n
-
-border-left-radius(n)
-  border-radius n 0 0 n
-
-// Transform
-
-transform()
-  vendor('transform', arguments)
-
-// Animation
-
-animation()
-  vendor('animation', arguments)
-
-// Transition
-
-transition()
-  vendor('transition', arguments)
-
-// Box-Shadow
-
-box-shadow()
-  vendor('box-shadow', arguments)
+circle(w)
+  square w
+  border-radius 50%
