--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -42,7 +42,7 @@ btn-bgcolor(n, l = 6, d = 4)
   display: inline-block;
   vertical-align: middle;
   box-shadow: 0 0 1px rgba(0, 0, 0, .4);
-  transition: background .4s ease
+  transition: background .4s ease, box-shadow .2s ease
   
   &:hover
     box-shadow: 0 0px 3px rgba(0, 0, 0, .4);
