--- a/css/components/card.styl
+++ b/css/components/card.styl
@@ -86,17 +86,17 @@
     color: color['normal'];
 
   * + .s-content
-    padding-top 0
+    padding-top: 0;
 
   .s-head + .s-content
-    margin-top -.8em
+    margin-top: -.8em;
 
   .s-bar
-    left 0
-    bottom 0
-    width 100%
-    height 50px
-    padding 0 1.5em
-    line-height 50px
-    position absolute
-    border-top 1px solid color-border-dark
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    padding: 0 1.5em;
+    line-height: 50px;
+    position: absolute;
+    border-top: 1px solid color['gray'];
