--- a/css/components/acomment.styl
+++ b/css/components/acomment.styl
@@ -9,6 +9,9 @@
 .m-comments
   position: relative;
 
+  @media mq-tablet
+    width: 80%;
+
 .m-acomment
   right: -15px;
   width: 120px;
@@ -27,12 +30,45 @@
     position: absolute;
     border-top: 1px solid color['gray'];
 
-  .z-left
+  &.z-left
     left: -15px;
     right: auto;
+    text-align: right;
     margin-right: 0;
     margin-left: -120px;
 
     &:before
       right: 0;
       left: auto;
+
+  @media mq-tablet
+    width: 20%;
+    margin-right: -@width;
+    
+    &.z-left
+      left: auto;
+      right: -15px;
+      margin-left: 0;
+      text-align: left;
+      margin-right: -20%;
+      margin-top: 10px;
+    
+    &.z-left:before
+      left: 0;
+      right: auto;
+  
+  @media mq-mobile
+    position: static;
+    margin-right: 0;
+
+    &.z-left
+      margin: 0;
+
+    &:before
+      border: 0;
+      content: '( ';
+      position: static;
+      padding-left: 5px;
+
+    &:after
+      content: ' )';
