Form组件颜色命名修改

--- a/css/variables.styl
+++ b/css/variables.styl
@@ -17,6 +17,8 @@ color = {
   normal: #222,
   link: #333,
 
+  border-normal: #ddd,
+  border-focus: #888,
   gray: #888,
   grey: #ddd,
   light-gray: #dbdbdb,
