--- a/css/elements/form.styl
+++ b/css/elements/form.styl
@@ -30,7 +30,7 @@ textarea
   padding: .5em .8em;
   border-radius: 2px;
   margin-bottom: .75em;
-  border: 1px solid color['grey'];
+  border: 1px solid color['border-normal'];
 
   &.disabled,
   &[disabled]
@@ -45,7 +45,7 @@ textarea
 
   &:active,
   &:focus
-    border-color: color['gray'];
+    border-color: color['border-normal'];
 
 textarea
   padding: .2em .8em;
@@ -78,22 +78,22 @@ label
 
   input
     margin: 0;
-    border-radius: 0;
     border-bottom: 0;
+    border-radius: 2px;
 
     &:active,
     &:focus
       margin-bottom: -1px;
       position: relative;
-      border-bottom: 1px solid color['gray'];
+      border-bottom: 1px solid color['border-normal'];
 
     &:last-child
-      border-bottom: 1px solid color['grey'];
+      border-bottom: 1px solid color['border-normal'];
 
       &:active,
       &:focus
         margin-bottom: 0;
-        border-bottom-color: color['gray'];
+        border-bottom-color: color['border-focus'];
 
   &.z-radius
     &:first-child
